Pagination in process.

--- a/Webpage/Client/app/templates/directives/search.html
+++ b/Webpage/Client/app/templates/directives/search.html
@@ -3,7 +3,7 @@
         <h3 class="panel-title">Information about the result</h3>
     </div>
     <div class="panel-body">
-        <p>URL: <a href={{web}}>{{search.WEB}}</a>.</p>
+        <p>URL: <a href={{search.WEB}}>{{search.WEB}}</a>.</p>
         <p>Date: {{search.DATE}}.</p>
         <p>Vulnerability: {{search.VULNERABILITY}}.</p>
     </div>
