--- a/Webpage/Client/app/templates/directives/searches.html
+++ b/Webpage/Client/app/templates/directives/searches.html
@@ -1,3 +1,15 @@
-<div class="list card">
-    <search ng-repeat="search in searches"></search>
-</div>
+<search ng-repeat="search in searches | startFrom:currentPage*pageSize | limitTo:pageSize"></search>
+<nav>
+    <ul class="pagination">
+        <li>
+            <a ng-disabled="currentPage == 0" ng-click="currentPage=currentPage-1" aria-label="Previous">
+                <span aria-hidden="true">&laquo; Previous</span>
+            </a>
+        </li>
+        <li>
+            <a ng-disabled="currentPage >= searches.length/pageSize-1" ng-click="currentPage=currentPage+1" aria-label="Next">
+                <span aria-hidden="true">Next &raquo;</span>
+            </a>
+        </li>
+    </ul>
+</nav>
