--- a/Webpage/Client/app/templates/main.html
+++ b/Webpage/Client/app/templates/main.html
@@ -10,7 +10,7 @@
         <div class="alert alert-warning" ng-hide="wrong">
             The URL is not right.
         </div>
-        <form class="form-vulsearch" role="form" ng-submit="search()">
+        <form class="form-vulsearch" role="form">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Enter an URL to search for vulnerabilities..." ng-model="websearch" required autofocus>
                 <span class="input-group-addon" data-toggle="tooltip" title="Example: http:/www.foo.com">?</span>
