--- a/Webpage/Client/app/templates/signin.html
+++ b/Webpage/Client/app/templates/signin.html
@@ -7,7 +7,7 @@
         <div class="alert alert-danger" ng-hide="in_impossible">
             Impossible to sign in.
         </div>
-        <form class="form-horizontal" ng-submit="signin()">
+        <form class="form-horizontal">
             <div class="form-group">
                 <div class="col-sm-12">
                     <div class="input-group">
@@ -45,7 +45,7 @@
         <div class="alert alert-danger" ng-hide="up_impossible">
             Impossible to sign up.
         </div>
-        <form id="signupform" class="form-horizontal" role="form" ng-submit="signup()">
+        <form id="signupform" class="form-horizontal" role="form">
             <div class="form-group">
                 <div class="col-md-12">
                     <div class="input-group">
