--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -24,7 +24,7 @@
     <div class="alert alert-success" ng-hide="successful">
         Password updated successfully.
     </div>
-    <form id="signupform" class="form-horizontal" role="form" ng-submit="updatePassword()">
+    <form id="signupform" class="form-horizontal" role="form">
         <div class="form-group">
             <div class="col-md-12">
                 <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required>
