Improvements in GUI.

--- a/Webpage/Client/app/templates/allsearches.html
+++ b/Webpage/Client/app/templates/allsearches.html
@@ -13,7 +13,7 @@
         Recovering searches information.
     </div>
     <div class="alert alert-danger" ng-hide="no_search">
-        Currently, there are no searches executed.
+        Currently, there is no vulnerability found.
     </div>
     <searches></searches>
 </div>
