--- a/Webpage/Client/app/templates/directives/search.html
+++ b/Webpage/Client/app/templates/directives/search.html
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-body">
         <p>URL: <a href={{search.WEB}}>{{search.WEB}}</a>.</p>
-        <p>Date: {{search.DATE}}.</p>
+        <p>Date: {{search.DATE | date:'medium'}}.</p>
         <p>Vulnerability: {{search.VULNERABILITY}}.</p>
     </div>
 </div>
