--- a/Webpage/Client/app/templates/main.html
+++ b/Webpage/Client/app/templates/main.html
@@ -13,7 +13,7 @@
         <form class="form-vulsearch" role="form">
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Enter an URL to search for vulnerabilities..." ng-model="websearch" required autofocus>
-                <span class="input-group-addon" data-toggle="tooltip" title="Example: http:/www.foo.com">?</span>
+                <span class="input-group-addon" data-toggle="tooltip" title="Example: http://www.foo.com">?</span>
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="submit" ng-click="search()">Search!</button>
                 </span>
