--- a/Webpage/Client/app/templates/signin.html
+++ b/Webpage/Client/app/templates/signin.html
@@ -101,5 +101,10 @@
                 </div>
             </div>
         </form>
+        <div class="well">
+            <p class="center">
+                When signing up, you are accepting the <a href="#/serviceconditions" alt="Service Conditions">Service Conditions</a> and the <a href="#/privacypolicy" alt="Privacy Policy">Privacy Policy</a>, including the <a href="#/cookiespolicy" alt="Cookies Policy">Use of Cookies</a>.
+            </p>
+        </div>
     </div>
 </div>
