Added link to sign in page in the alert.

--- a/Webpage/Client/app/templates/main.html
+++ b/Webpage/Client/app/templates/main.html
@@ -1,8 +1,8 @@
-<div class="jumbotron" style="padding-bottom:0px;">
+<div class="jumbotron vertical-center">
     <div class="container padding">
         <h1 class="text-center">Project Vulpix</h1>
         <div class="alert alert-danger" ng-hide="web">
-            You have to be signed in to search for vulnerabilities.
+            You have to be <a href="#/signin" alt="Sign in" class="alert-link">signed in</a> to search for vulnerabilities.
         </div>
         <div class="alert alert-danger" ng-hide="problem">
             There is a problem, try the search later.
