Searches results page prepared to have pagination.

--- a/Webpage/Client/app/templates/allsearches.html
+++ b/Webpage/Client/app/templates/allsearches.html
@@ -8,7 +8,7 @@
 </div>
 
 <div class="container">
-    <h1>My searches</h1>
+    <h1>My searches <span class="badge">{{totalItems}}</span></h1>
     <div class="alert alert-info" ng-hide="searching">
         Recovering searches information.
     </div>
