--- a/Webpage/Client/app/templates/directives/searches.html
+++ b/Webpage/Client/app/templates/directives/searches.html
@@ -1,1 +1,7 @@
 <search ng-repeat="search in searches"></search>
+<!--<pagination
+    ng-model="currentPage"
+    total-items="totalItems"
+    max-size="maxSize"
+    boundary-links="true">
+</pagination>-->
