Added a spinning icon in the alert of "Now searching".

--- a/Webpage/Client/app/templates/nowsearching.html
+++ b/Webpage/Client/app/templates/nowsearching.html
@@ -16,7 +16,7 @@
         Currently, there is no search executed.
     </div>
     <div class="alert alert-success" ng-hide="search">
-        There is a search executing right now.
+        <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span> There is a search executing right now.
     </div>
     <div class="panel panel-primary" ng-hide="result">
         <div class="panel-heading">
