Autocomplete form deactivated but browser denied it.

--- a/Webpage/Client/app/templates/updatepassword.html
+++ b/Webpage/Client/app/templates/updatepassword.html
@@ -24,16 +24,16 @@
     <div class="alert alert-success" ng-hide="successful">
         Password updated successfully.
     </div>
-    <form id="signupform" class="form-horizontal" role="form">
+    <form id="signupform" class="form-horizontal" role="form" autocomplete="off">
         <div class="form-group">
             <div class="col-md-12">
-                <input type="password" class="form-control" id="oldpass" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required>
+                <input type="password" class="form-control" name="oldpass" placeholder="Old password for checking" ng-model="oldpass" required autofocus>
             </div>
         </div>
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass1" name="pass1" placeholder="New password" ng-model="newpass" pattern=".{6,}" required autofocus>
+                    <input type="password" class="form-control" name="pass1" placeholder="New password" ng-model="newpass" pattern=".{6,}" required>
                     <span class="input-group-addon" data-toggle="tooltip" title="6 characters min.">?</span>
                 </div>
             </div>
@@ -41,7 +41,7 @@
         <div class="form-group">
             <div class="col-md-12">
                 <div class="input-group">
-                    <input type="password" class="form-control" id="pass2" name="pass2" placeholder="Retype the new password" ng-model="reppass" pattern=".{6,}" required>
+                    <input type="password" class="form-control" name="pass2" placeholder="Retype the new password" ng-model="reppass" pattern=".{6,}" required>
                     <span class="input-group-addon" data-toggle="tooltip" title="6 characters min.">?</span>
                 </div>
             </div>
