Final name: Krashr. Logos done too.

--- a/Webpage/Client/app/templates/main.html
+++ b/Webpage/Client/app/templates/main.html
@@ -1,6 +1,6 @@
 <div class="jumbotron vertical-center">
     <div class="container padding">
-        <h1 class="text-center">Project Vulpix</h1>
+        <img src="images/krashr-logo-mini.png" class="img-responsive center-block" alt="Krashᴚ logo" />
         <div class="alert alert-danger" ng-hide="web">
             You have to be <a href="#/signin" alt="Sign in" class="alert-link">signed in</a> to search for vulnerabilities.
         </div>
