Users can delete their accounts.

--- a/Webpage/Client/app/templates/profile.html
+++ b/Webpage/Client/app/templates/profile.html
@@ -62,7 +62,8 @@
         <div class="form-group">
             <div class="col-md-offset-0 col-md-12">
                 <button id="btn-update" type="submit" class="btn btn-info" ng-click="updateProfile()">Update profile</button>
-                <button id="btn-signout" type="button" class="btn btn-danger" ng-click="signOut()">Sign out</button>
+                <button id="btn-signout" type="button" class="btn btn-warning" ng-click="signOut()">Sign out</button>
+                <button id="btn-delete-account" type="button" class="btn btn-danger" ng-click="removeUser()">Delete account</button>
             </div>
         </div>
     </form>
