Changed Project Vulpix for Krashr.

--- a/Webpage/Client/app/templates/cookiespolicy.html
+++ b/Webpage/Client/app/templates/cookiespolicy.html
@@ -8,9 +8,9 @@
     <p class="c0"><span></span></p>
     <p class="c1"><span>Cookies allow a site or services to know if your computer or device has visited that site or service before. Cookies can then be used to help understand how the site or service is being used, help you navigate between pages efficiently, help remember your preferences, and generally improve your browsing experience. Cookies can also help ensure marketing you see online is more relevant to you and your interests.</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span class="c3">What types of cookies does Project Vulpix use?</span></p>
+    <p class="c1"><span class="c3">What types of cookies does Krashr use?</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span>There are generally four categories of cookies: “Strictly Necessary,” “Performance,” “Functionality,” and “Targeting.” Project Vulpix routinely uses first three categories of cookies on the Service. You can find out more about each cookie category below.</span></p>
+    <p class="c1"><span>There are generally four categories of cookies: “Strictly Necessary,” “Performance,” “Functionality,” and “Targeting.” Krashr routinely uses first three categories of cookies on the Service. You can find out more about each cookie category below.</span></p>
     <p class="c0"><span></span></p>
     <ol start="1" class="c2"><li class="c1 c4"><span><b>Strictly Necessary Cookies</b>. These cookies are essential, as they enable you to move around the Service and use its features, such as accessing logged in or secure areas.</span></li></ol>
     <p class="c0"><span></span></p>
@@ -25,7 +25,7 @@
     <p class="c0"><span></span></p>
     <p class="c1"><span class="c3">First and third party cookies</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span>First-party cookies are cookies that belong to Project Vulpix, third-party cookies are cookies that another party places on your device through our Service. Third-party cookies may be placed on your device by someone providing a service for Project Vulpix, for example to help us understand how our service is being used. Third-party cookies may also be placed on your device by our business partners so that they can use them to advertise products and services to you elsewhere on the Internet.</span></p>
+    <p class="c1"><span>First-party cookies are cookies that belong to Krashr, third-party cookies are cookies that another party places on your device through our Service. Third-party cookies may be placed on your device by someone providing a service for Krashr, for example to help us understand how our service is being used. Third-party cookies may also be placed on your device by our business partners so that they can use them to advertise products and services to you elsewhere on the Internet.</span></p>
     <p class="c0"><span></span></p>
     <p class="c1"><span class="c3">More information about cookies</span></p>
     <p class="c0"><span></span></p>
