--- a/Webpage/Client/app/templates/serviceconditions.html
+++ b/Webpage/Client/app/templates/serviceconditions.html
@@ -7,17 +7,17 @@
     <p class="c0"><span></span></p>
     <p class="c1"><span>You are responsible for your use of the service, and for any consequences thereof.</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span>You may use the service only if you can form a binding contract with Project Vulpix and are not a person barred from receiving services under the laws of Spain or other applicable jurisdiction. If you are accepting these Terms and using the service on behalf of a company, organization, government, or other legal entity, you represent and warrant that you are authorized to do so. You may use the service only in compliance with these Terms and all applicable local, state, national, and international laws, rules and regulations.</span></p>
+    <p class="c1"><span>You may use the service only if you can form a binding contract with Krashr and are not a person barred from receiving services under the laws of Spain or other applicable jurisdiction. If you are accepting these Terms and using the service on behalf of a company, organization, government, or other legal entity, you represent and warrant that you are authorized to do so. You may use the service only in compliance with these Terms and all applicable local, state, national, and international laws, rules and regulations.</span></p>
     <p class="c0"><span></span></p>
     <p class="c1"><span>We retain the right to create limits on use and also stop providing the service at any time without prior notice to you.</span></p>
     <p class="c0"><span></span></p>
     <p class="c1"><span class="c3">Privacy</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span>Any information that you or other users provide to Project Vulpix is subject to our <a href="http://localhost:8000/app/#/privacypolicy" alt="Project Vulpix's Privacy Policy">Privacy Policy</a>, which governs our collection and use of your information.</span></p>
+    <p class="c1"><span>Any information that you or other users provide to Krashr is subject to our <a href="http://localhost:8000/app/#/privacypolicy" alt="Krashr's Privacy Policy">Privacy Policy</a>, which governs our collection and use of your information.</span></p>
     <p class="c0"><span></span></p>
     <p class="c1"><span class="c3">Passwords</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span>You are responsible for safeguarding the password that you use to access the Services and for any activities or actions under your password. We encourage you to use “strong” passwords (passwords that use a combination of upper and lower case letters, numbers and symbols) with your account. Project Vulpix cannot and will not be liable for any loss or damage arising from your failure to comply with the above.</span></p>
+    <p class="c1"><span>You are responsible for safeguarding the password that you use to access the Services and for any activities or actions under your password. We encourage you to use “strong” passwords (passwords that use a combination of upper and lower case letters, numbers and symbols) with your account. Krashr cannot and will not be liable for any loss or damage arising from your failure to comply with the above.</span></p>
     <p class="c0"><span></span></p>
     <p class="c1"><span>Effective: February 3, 2016.</span></p>
 </div>
