--- a/frontend/templates/privacypolicy.html
+++ b/frontend/templates/privacypolicy.html
@@ -5,7 +5,7 @@
     <p class="c0"><span></span></p>
     <p class="c1"><span>This Privacy Policy describes how and when Krashr collects and uses your information when you use our service. When using our service you consent to the collection, transfer, storage, disclosure, and use of your information as described in this Privacy Policy.</span></p>
     <p class="c0"><span></span></p>
-    <p class="c1"><span>Your information is controlled by Krashr, Juan de la Cierva, 8, 48910 Sestao, Spain. Despite this, you alone control and are responsible for the searches you submit through the service.</span></p>
+    <p class="c1"><span>Your information is controlled by Krashr, 48910 Sestao, Spain. Despite this, you alone control and are responsible for the searches you submit through the service.</span></p>
     <p class="c0"><span></span></p>
     <p class="c1"><span>Irrespective of which country you live in, you authorize us to use your information in, and as a result to transfer it to and store it in, Spain, and any other country where we operate. Privacy and data protection laws in some of these countries may vary from the laws in the country where you live.</span></p>
     <p class="c0"><span></span></p>
